{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 63,
  "lineage": "f8637a65-ff7c-0296-3d5d-3baf3567726e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_tic_tac_toe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:471112957000:instance/i-057dc8e42e4b71b98",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057dc8e42e4b71b98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "key-for-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02b09fe655e1c9245",
            "private_dns": "ip-172-31-81-212.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.81.212",
            "public_dns": "ec2-54-221-30-70.compute-1.amazonaws.com",
            "public_ip": "54.221.30.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07c2d1d4f9d19741b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terraform-20240411151337433600000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026d861dd53456951",
            "tags": {
              "Name": "Ec2 Tic-tac-toe tf"
            },
            "tags_all": {
              "Name": "Ec2 Tic-tac-toe tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01193dde41ef59f2e"
            ]
          },
          "dependencies": [
            "aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112957000:internet-gateway/igw-03db38e8de65647fb",
            "id": "igw-03db38e8de65647fb",
            "owner_id": "471112957000",
            "tags": {
              "Name": "Gateway Tic-tac-toe tf"
            },
            "tags_all": {
              "Name": "Gateway Tic-tac-toe tf"
            },
            "vpc_id": "vpc-01e38c38dd32194d5"
          },
          "dependencies": [
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112957000:route-table/rtb-0275b4af42c36ca21",
            "id": "rtb-0275b4af42c36ca21",
            "owner_id": "471112957000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03db38e8de65647fb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route table Tic-tac-toe tf"
            },
            "tags_all": {
              "Name": "Route table Tic-tac-toe tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e38c38dd32194d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_tf",
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fec5762aa73d44f6",
            "route_table_id": "rtb-0275b4af42c36ca21",
            "subnet_id": "subnet-07dff2471ec56983b"
          },
          "dependencies": [
            "aws_internet_gateway.igw_tf",
            "aws_route_table.rt_tf",
            "aws_subnet.subnet_tf",
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112957000:security-group/sg-01193dde41ef59f2e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01193dde41ef59f2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Frontend",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240411151337433600000001",
            "name_prefix": "terraform-",
            "owner_id": "471112957000",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08064500e4cdec605"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112957000:subnet/subnet-07dff2471ec56983b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dff2471ec56983b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112957000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet Tic-tac-toe tf"
            },
            "tags_all": {
              "Name": "Subnet Tic-tac-toe tf"
            },
            "vpc_id": "vpc-01e38c38dd32194d5"
          },
          "dependencies": [
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112957000:vpc/vpc-01e38c38dd32194d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b9371f4e061cfb26",
            "default_route_table_id": "rtb-0bc04c64335aaa578",
            "default_security_group_id": "sg-0bcd53f3f015f50c1",
            "dhcp_options_id": "dopt-0334212f475d811a3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01e38c38dd32194d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bc04c64335aaa578",
            "owner_id": "471112957000",
            "tags": {
              "Name": "Vpc Tic-tac-toe tf"
            },
            "tags_all": {
              "Name": "Vpc Tic-tac-toe tf"
            }
          }
        }
      ]
    }
  ]
}